Fix background not rendering properly due to overflow

--- a/src/stylesheets/application.scss
+++ b/src/stylesheets/application.scss
@@ -16,4 +16,5 @@ body {
 html,
 .full-height {
     height: 100%;
+    overflow: auto;
 }
